<!--
  ~ <Asset Management Water System for managing water system assets like
  ~ finance, maintenance and supply by Community Level.>
  ~     Copyright (C) <2021>  <Smart Tech Solution PVT. LTD.>
  ~     This program is free software: you can redistribute it and/or
  ~ modify it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~     This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  ~ Affero General Public License for more details.
  ~     You should have received a copy of the GNU Affero General Public
  ~ License along with this program.  If not, see
  ~ <https://www.gnu.org/licenses/>.
  ~ Smart Tech Solution Pvt. Ltd.
  ~ Bhakti Thapa Sadak, New Baneshwor,
  ~ Kathmandu, Nepal
  ~ Tel: +977-01-5245027
  ~ Email: info@smarttech.com.np
  ~ Website: http://www.smarttech.com.np/
  -->

<resources>
    <string name="app_name">AssetManagement</string>
    <string name="default_notification_channel_id" translatable="false">AssetManagement</string>

    <string name="title_cashbook">CASHBOOK</string>
    <string name="title_maintenance">MAINTENANCE</string>
    <string name="title_service">SERVICE</string>
    <string name="title_notification">NOTIFICATIONS</string>
    <string name="error_no_notifications">No notifications</string>

    <string name="tab_income">INCOME</string>
    <string name="tab_expenditure">EXPENDITURE</string>

    <string name="tab_preventive">PREVENTIVE</string>
    <string name="tab_inspections">INSPECTION</string>
    <string name="tab_reactive">REACTIVE</string>

    <string name="tab_supply">SUPPLY</string>
    <string name="tab_quality_test">QUALITY TESTS</string>


    <string name="login_title"></string>
    <string name="login_sub_title">ASSET MANAGEMENT</string>
    <string name="login_sub_title_tag">WATER SYSTEMS</string>
    <string name="loginlabel_edit_phone_number">&lt;        Edit Phone number</string>
    <string name="login_label_enter_phone_number">Enter your phone number</string>
    <string name="login_label_phone_number_information">Contains 10 digits</string>
    <string name="login_label_enter_passcode">Enter your passcode</string>
    <string name="login_label_passcode_information">Contains at least 4 digits</string>

    <string name="label_from_previous_month">From previous month </string>
    <string name="label_total_for"> total</string>

    <string name="extra_month">month</string>
    <string name="extra_year">year</string>
    <string name="extra_week">week</string>
    <string name="extra_rs">Rs</string>
    <string name="extra_of">OF</string>


    <string name="close_cashbook_dialog_title">Close -</string>
    <string name="close_cashbook_dialog_confirmation_title"> Confirm Closing </string>
    <string name="close_cashbook_dialog_confirmation_message">Accounts closed cannot be reverted</string>

    <string name="add_cashbook_dialog_title">Add income</string>
    <string name="add_cashbook_select_category">Select Category</string>
    <string name="add_cashbook_select_date">Select date</string>
    <string name="add_cashbook_income_title">Income Title</string>
    <string name="add_cashbook_income_amount">Income Amount</string>
    <string name="add_cashbook_expense_title">Expense Title</string>
    <string name="add_cashbook_expense_amount">Expense Amount</string>
    <string name="add_cashbook_expense_maintenance_amount">Maintenance Amount</string>
    <string name="add_cashbook_water_supplied">Water Sold</string>
    <string name="add_cashbook_remarks">Remarks</string>
    <string name="add_cashbook_information">Enter water supplied, while recording water sales</string>

    <string name="delete_cashbook">Delete Cashbook?</string>
    <string name="delete_cashbook_message">Are you sure you want to delete this item?</string>

    <string name="cashbook_empty">No {cashbookType} available for {monthName}</string>
    <string name="cashbook_category_empty">Please select cashbook category</string>
    <string name="cashbook_date_empty">Please select date</string>
    <string name="cashbook_income_title_empty">Please add income title</string>
    <string name="cashbook_expense_title_empty">Please add expense title</string>
    <string name="cashbook_income_amount_empty">Please add income amount</string>
    <string name="cashbook_expense_amount_empty">Please add expense amount</string>
    <string name="cashbook_water_supply_empty">Please add water supply</string>

    <string name="maintenance_empty">No records available for {maintenanceType}</string>
    <string name="maintenance_interval">Interval: </string>
    <string name="maintenance_risk_score">Risk Score:</string>
    <string name="maintenance_log_entries">Log Entries: </string>
    <string name="maintenance_action_date">Action Date: </string>
    <string name="maintenance_responsible_person">Responsible: </string>
    <string name="maintenance_estimated_cost">Est. Cost: </string>

    <string name="maintenance_possible_failure_and_mitigation">Possible Failure And Mitigation</string>
    <string name="not_scheduled_maintenance_empty">You don\'t have any unscheduled maintenance for {maintenanceType}</string>
    <string name="maintenance_not_scheduled_title">Not Scheduled Maintenance</string>

    <string name="maintenance_log_total_cost"> Total cost </string>
    <string name="maintenance_log_labour_cost">Labour</string>
    <string name="maintenance_log_material_cost">Consumable</string>
    <string name="maintenance_log_replacement_cost">Replacement</string>
    <string name="maintenance_log_add_cost_separately"> Add Cost Separately</string>
    <string name="maintenance_log_interval"> Interval (in days)</string>
    <string name="maintenance_log_supply_belt">Supply belt</string>
    <string name="maintenance_log_entry_title">Maintenance Log</string>
   <string name="maintenance_log_entry_remarks">Remarks</string>




    <string name="maintenance_sort_by_action_date">Date</string>
    <string name="maintenance_sort_by_estimated_cost">Cost</string>
    <string name="maintenance_sort_by_risk_score">Risk</string>
    
    <string name="unscheduled_maintenance_log_required">Select maintenance</string>
    <string name="unscheduled_maintenance_date_empty">Please select date</string>
    <string name="unscheduled_maintenance_add_cost">Please add cost</string>
    <string name="unscheduled_duration_empty">Please add intervals</string>
    <string name="unscheduled_log_type_empty">Please add log type</string>
    <string name="unscheduled_maintenance_action">Maintenance action</string>
    <string name="unscheduled_possible_failure">Possible Failure</string>
    <string name="unscheduled_maintenance_log_entry_title">Component</string>
    <string name="unscheduled_maintenance_log_type_title">Log Type</string>
    <string name="unscheduled_maintenance_log_type_maintenance">Maintenance Log</string>
    <string name="unscheduled_maintenance_log_type_issue">Issue Log</string>


    <string name="service_add_record">Add water supply record</string>
    <string name="service_total_supply">Total Daily Supply</string>
    <string name="service_from_date">Start Date </string>
    <string name="service_to_date">End Date</string>
    <string name="service_units">Units</string>
    <string name="service_mg_per_litre">M.G/L</string>
    <string name="service_per_litre">/ Litre</string>
    <string name="service_households">Estimated Households</string>
    <string name="service_beneficiaries">Estimated Beneficiaries</string>

    <string name="quality_test_add_result">ADD WATER TEST RESULTS</string>
    <string name="quality_test_from_date">Start Date</string>
    <string name="quality_test_to_date">End Date</string>
    <string name="quality_test_ph">P.H</string>
    <string name="quality_test_chlorine_residue">Chlorine Residue</string>
    <string name="quality_test_chloride">Chloride</string>
    <string name="quality_test_electrolytes">Electrolytes</string>
    <string name="quality_test_dts">D.T.S</string>

    <string name="score_min">Min</string>
    <string name="score_low">Low</string>
    <string name="score_mid">Mid</string>
    <string name="score_high">High</string>

    <string name="action_save">Save</string>
    <string name="action_add">ADD</string>
    <string name="action_add_income">Add Income</string>
    <string name="action_add_expense">Add Expenditure</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_close_month">Close month</string>
    <string name="action_closed">Closed</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_save_log">Save log</string>
    <string name="action_update_log">Update log</string>
    <string name="action_save_record">Save Records</string>
    <string name="action_select_picture">Select Picture</string>
    <string name="action_capture_picture">Capture Picture</string>
    <string name="action_add_date_range">Add record for a date range</string>
    <string name="action_sort_by">Sort By</string>


    <string name="error_no_internet">No internet!!</string>
    <string name="error_server">Server error</string>
    <string name="error_no_internet_message">Please connect to internet and try again</string>
    <string name="error_file_should_be_small">Selected Picture file should be less than 1 mb</string>
    <string name="error_supply_belt_empty">Select supply belt</string>
    <string name="error_water_parameters">Add parameters correctly</string>

    <string name="error_permission_required">The requested permission is required</string>
    <string name="error_permission_required_message">Please give us appropriate permission, Without the permission you cannot select your photos and medias</string>
    <string name="error_supply_from_date_empty">Select start date</string>
    <string name="error_supply_to_date_empty">Select end date</string>
    <string name="error_invalid_date">Select proper date</string>
    <string name="error_supply_total_units">Enter total supply unit</string>
    <string name="error_supply_estimated_household_empty">Enter estimated household</string>
    <string name="error_supply_estimated_beneficiaries_empty">Enter estimated beneficiaries</string>

    <string name="response_save_data_success">Your data has been successfully saved</string>
    <string name="loader_loading">Loading...</string>
    <string name="loader_saving">Saving...</string>
    <string name="loader_updating">Updating...</string>

    <array name="array_unscheduled_log_type">
        <item>@string/unscheduled_maintenance_log_type_title</item>
        <item>@string/unscheduled_maintenance_log_type_maintenance</item>
        <item>@string/unscheduled_maintenance_log_type_issue</item>
    </array>

</resources>