<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ <Asset Management Water System for managing water system assets like
  ~ finance, maintenance and supply by Community Level.>
  ~     Copyright (C) <2021>  <Smart Tech Solution PVT. LTD.>
  ~     This program is free software: you can redistribute it and/or
  ~ modify it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~     This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  ~ Affero General Public License for more details.
  ~     You should have received a copy of the GNU Affero General Public
  ~ License along with this program.  If not, see
  ~ <https://www.gnu.org/licenses/>.
  ~ Smart Tech Solution Pvt. Ltd.
  ~ Bhakti Thapa Sadak, New Baneshwor,
  ~ Kathmandu, Nepal
  ~ Tel: +977-01-5245027
  ~ Email: info@smarttech.com.np
  ~ Website: http://www.smarttech.com.np/
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_cashbook"
        android:icon="@drawable/ic_tab_bar_cashbook"
        android:title="@string/title_cashbook" />

    <item
        android:id="@+id/navigation_maintenance"
        android:icon="@drawable/ic_tab_bar_maintenance"
        android:title="@string/title_maintenance" />

    <item
        android:id="@+id/navigation_service"
        android:icon="@drawable/ic_tab_bar_service"
        android:title="@string/title_service" />

</menu>